bynkc/tests/fixtures/negative/476_or_pattern_value_type_mismatch/input.bynk
commons demo

fn f(o: Option[Int]) -> Int {
  match o {
    1 | Some(_) => 0
    None => 1
  }
}
